--- a/index.qmd
+++ b/index.qmd
@@ -5,3 +5,9 @@ title: "S&DS-3610-PSET-1"
 This is a Quarto website.
 
 To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+
+## NBA Schedule Visualization
+
+Below is the 30x30 grid plot of the 2022 NBA schedule, faceted by division to reveal the league's scheduling structure.
+
+![NBA Schedule Faceted Grid](nba_schedule_faceted_grid.png)
